# oxideav-h264

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  fuzz.yml  release-plz.yml
benches/: decode.rs  encode.rs  inter_pred_bench.rs  transform_bench.rs
examples/: decode_cmp.rs  dump_yuv.rs  probe.rs
fuzz/: Cargo.toml  README.md
fuzz/examples/: repro_oracle.rs
fuzz/fuzz_targets/: ffmpeg_oracle_decode.rs  panic_free_decode.rs  sei_payload.rs
fuzz/src/: lib.rs
src/: b_mb.rs  b_mb_444.rs  b_mb_hi.rs  bitstream.rs  bitwriter.rs  cabac.rs  cabac_ctx.rs  cavlc.rs  cavlc_enc.rs  deblock.rs  deblock_hi.rs  decoder.rs  dpb.rs  dpb_output.rs  encoder.rs  fwd_transform.rs  golomb.rs  h264_decoder.rs  h264_encoder.rs  inter_pred.rs  intra_pred.rs  intra_pred_hi.rs  lib.rs  macroblock_layer.rs  mb.rs  mb_444.rs  mb_address.rs  mb_grid.rs  mb_hi.rs  mb_hi_422.rs  mb_hi_444.rs  mb_type.rs  motion.rs  mv_deriv.rs  nal.rs  non_vcl.rs  p_mb.rs  p_mb_444.rs  p_mb_hi.rs  picture.rs  (+17 more)
src/cabac/: b_mb.rs  b_mb_hi.rs  binarize.rs  context.rs  engine.rs  mb.rs  mb_444.rs  mb_hi.rs  mod.rs  p_mb.rs  p_mb_444.rs  p_mb_hi.rs  residual.rs  tables.rs
src/cabac_enc/: binarize.rs  engine.rs  mb.rs  mod.rs
src/encoder/: STATUS.md  bitstream.rs  cabac_engine.rs  cabac_path.rs  cabac_syntax.rs  cavlc.rs  deblock.rs  field.rs  intra4x4.rs  intra_pred.rs  macroblock.rs  me.rs  mod.rs  nal.rs  pps.rs  rate_control.rs  rdo.rs  session.rs  slice.rs  sps.rs  transform.rs
src/simd/: chunked.rs  mod.rs  portable.rs  scalar.rs
tests/: cabac_high_regression.rs  cabac_iframe.rs  cabac_iframe_ffmpeg.rs  cabac_ipcm.rs  chroma_422_444.rs  decode_10bit_ipcm.rs  decode_8x8.rs  decode_b_10bit.rs  decode_bframe.rs  decode_bframe_implicit.rs  decode_bframe_temporal.rs  decode_cabac_8x8.rs  decode_cabac_8x8_1mb.rs  decode_cabac_b.rs  decode_cabac_b_10bit.rs  decode_cabac_b_8x8.rs  decode_cabac_i_10bit.rs  decode_cabac_p.rs  decode_cabac_p_10bit.rs  decode_cabac_p_8x8_sub_mb_type.rs  decode_cabac_p_mbref_drift2.rs  decode_cabac_p_multiref.rs  decode_cabac_p_subref_drift3.rs  decode_iframe.rs  decode_iframe_10bit.rs  decode_iframe_10bit_hi_chroma.rs  decode_iframe_12_14bit.rs  decode_iframe_medium.rs  decode_mbaff.rs  decode_mbaff_pb.rs  decode_p_8x8.rs  decode_pframe.rs  decode_pframe_10bit.rs  decode_scaling_list.rs  docs_corpus.rs  encode_10frame_testsrc.rs  encode_cabac_roundtrip.rs  encode_ffmpeg_decode.rs  encode_pframe_roundtrip.rs  encode_roundtrip.rs  (+62 more)
tests/fixtures/: 10bit_b_64x64.es  10bit_b_64x64.yuv  10bit_cabac_b_64x64.es  10bit_cabac_b_64x64.yuv  10bit_cabac_i_64x64.es  10bit_cabac_i_64x64.yuv  10bit_cabac_p_64x64.es  10bit_cabac_p_64x64.yuv  bframe_implicit_64x64.es  bframe_implicit_64x64.yuv  bframe_temporal_64x64.es  bframe_temporal_64x64.yuv  bslice_64x64.es  bslice_64x64.yuv  cabac_8x8_128x128.es  cabac_8x8_128x128.yuv  cabac_8x8_1mb.es  cabac_8x8_1mb.yuv  cabac_b_64x64.es  cabac_b_64x64.yuv  cabac_b_8x8_128x128.es  cabac_b_8x8_128x128.yuv  cabac_high_200x200.es  cabac_high_200x200.yuv  cabac_high_200x200_noisy.es  cabac_high_200x200_noisy.yuv  cabac_i_64x64.es  cabac_i_64x64.yuv  cabac_i_tiny.es  cabac_p_64x64.es  cabac_p_64x64.yuv  h264_8x8_intra.es  h264_8x8_intra.yuv  iframe_10bit_422_64x64.es  iframe_10bit_422_64x64.yuv  iframe_10bit_444_64x64.es  iframe_10bit_444_64x64.yuv  iframe_10bit_64x64.es  iframe_10bit_8x8_64x64.es  iframe_10bit_8x8_64x64.yuv  (+55 more)
tests/fixtures/fuzz_regressions/: crash-28d2a5c63be321cb8e69303316d1d79ec32f91aa  crash-560624b82fc3234c42284c67e95b3b70a971ee55  crash-874295dc5eb97498eabc3cfa844f74af658f8540  crash-8f49a0cffd9443dc4a4389d043a9069fa4fbd5e8  crash-b741d946292d96dd1a04b334523ddcd8e5846431  (+3 more)
