[package]
name = "oxideav-h264"
version = "0.0.5"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-h264"
authors = ["Mark Karpeles"]
description = "Pure-Rust H.264 / AVC (ITU-T H.264 | ISO/IEC 14496-10) decoder for oxideav"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-h264"
keywords = ["multimedia", "video", "h264", "avc", "codec"]
categories = ["multimedia::encoding", "multimedia::video"]

[features]
# Developer-only: emit bin-level trace to stderr during CABAC decode.
# Feeds the diff-against-JM/FFmpeg investigation documented in
# `docs/cabac-investigation.md`.
cabac-trace = []

[dependencies]
oxideav-core = "0.1"
oxideav-codec = "0.1"
[dev-dependencies]
oxideav-core = "0.1"
oxideav-codec = "0.1"
