[package]
name = "oxideav-h264"
version = "0.0.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-h264"
homepage = "https://github.com/OxideAV/oxideav-h264"
authors = ["Mark Karpeles"]
description = "Pure-Rust H.264 / AVC (ITU-T H.264 | ISO/IEC 14496-10) codec for oxideav — under spec-driven rewrite, no decode/encode functionality yet"
readme = "README.md"
keywords = ["multimedia", "video", "h264", "avc", "codec"]
categories = ["multimedia::encoding", "multimedia::video"]

[dependencies]
oxideav-core = "0.1"
thiserror = "2"
