[package]
name = "oxideav-h264"
version = "0.1.2"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-h264"
homepage = "https://github.com/OxideAV/oxideav-h264"
authors = ["Mark Karpeles"]
description = "Pure-Rust H.264 / AVC (ITU-T H.264 | ISO/IEC 14496-10) codec for oxideav — under spec-driven rewrite, no decode/encode functionality yet"
readme = "README.md"
keywords = ["multimedia", "video", "h264", "avc", "codec"]
categories = ["multimedia::encoding", "multimedia::video"]

[features]
default = []
# Enables `#![feature(portable_simd)]` and the `std::simd` code paths
# in `src/simd/portable.rs`. Requires a nightly toolchain. The default
# build relies on chunked fixed-size arrays that LLVM auto-vectorises
# reliably on stable.
nightly = []

[dependencies]
oxideav-core = "0.1"
thiserror = "2"

[dev-dependencies]
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "inter_pred_bench"
harness = false

[[bench]]
name = "transform_bench"
harness = false
